# 3D-Renderer-Playdate

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Source/: main.lua  pdxinfo
include/: display.h  logging.h  memory.h  mesh.h  triangle.h  vector.h
src/: display.c  display.h  main.c  memory.c  memory.h  mesh.c  mesh.h  triangle.h  vector.c  vector.h
